--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body, html {
   color: var(--white);
 }
 
+/* Intro Page */
 #intro {
   display: flex;
   justify-content: center;
@@ -28,6 +29,7 @@ body, html {
   color: var(--gray-light);
 }
 
+/* Header */
 header {
   display: flex;
   justify-content: space-between;
@@ -51,6 +53,7 @@ a:hover {
   color: var(--white);
 }
 
+/* Main Grid */
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
