--- a/style.css
+++ b/style.css
@@ -70,3 +70,24 @@ a:hover {
   color: var(--white);
   font-size: 1.5rem;
 }
+/* 추가 - Intro 배경 하얗게 */
+#intro {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+/* 페이지 전환용 공통 섹션 */
+.page {
+  padding: 2rem;
+}
+
+/* 임시 페이지 디자인 */
+.placeholder {
+  height: 400px;
+  background-color: var(--gray);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  font-size: 2rem;
+}
