--- a/style.css
+++ b/style.css
@@ -11,21 +11,24 @@ body, html {
   font-family: sans-serif;
   background-color: var(--white);
   color: var(--black);
+  cursor: url('cursor.png'), auto;
 }
 
 /* Intro Video Fullscreen */
 #intro {
-  position: fixed;
-  width: 100%;
-  height: 100%;
+  background-color: #000000;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
-  z-index: 9999;
-  cursor: pointer;
+}
+.intro-video-wrapper {
+  width: 90%;
+  height: 90%;
 }
 #introVideo {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -51,16 +54,16 @@ header {
   cursor: pointer;
 }
 
-/* Banner Area */
+/* Banner */
 .banner {
   width: 100%;
 }
 .banner-image {
   width: 100%;
   height: auto;
+  max-height: 900px;
   display: block;
   object-fit: cover;
-  max-height: 900px;
 }
 
 /* Product Grid */
@@ -71,19 +74,22 @@ header {
   padding: 2rem;
 }
 .product-card {
-  background-color: var(--gray);
-  color: var(--white);
-  height: 250px;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.product-card img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  display: block;
 }
 
 /* ABOUT Page */
 .about-hero img {
   width: 100%;
   height: auto;
-  display: block;
   object-fit: cover;
   max-height: 900px;
 }
