--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body, html {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  transition: opacity 1s ease;
 }
 .intro-video-wrapper {
   width: 90%;
@@ -33,6 +34,11 @@ body, html {
   height: 100%;
   object-fit: cover;
   cursor: pointer;
+}
+
+/* Main page fade-in */
+#main {
+  transition: opacity 1s ease;
 }
 
 /* Header with Center Logo */
