--- a/style.css
+++ b/style.css
@@ -86,14 +86,7 @@ header {
   max-width: 300px;
   height: auto;
   display: block;
-  -webkit-mask-image: url('frame_product.png');
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-size: contain;
-  -webkit-mask-position: center;
-  mask-image: url('frame_product.png');
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  mask-position: center;
+  clip-path: url(#clip-product);
 }
 
 .about-hero img {
