--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   cursor: url('cursor.png'), auto;
 }
 
-/* Intro */
+/* Intro Page */
 #intro {
   position: fixed;
   width: 100vw;
@@ -22,6 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 10;
+  transition: opacity 1s ease-in-out;
 }
 
 .intro-video-wrapper video {
@@ -35,6 +36,7 @@ body {
   transition: opacity 1s ease-in-out;
 }
 
+/* Header Navigation */
 header {
   display: flex;
   justify-content: space-between;
@@ -70,7 +72,7 @@ header {
   display: block;
 }
 
-/* Product Grid */
+/* Product Grid with SVG Clipping */
 .product-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -86,11 +88,17 @@ header {
 
 .product-card svg {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: block;
 }
 
-/* About */
+.product-card image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* About Section */
 .about-hero .banner-image {
   width: 100%;
   height: auto;
@@ -126,7 +134,7 @@ header {
   line-height: 2;
 }
 
-/* Account */
+/* Account Section */
 .login-box {
   max-width: 400px;
   margin: 4rem auto;
@@ -173,7 +181,7 @@ header {
   text-decoration: none;
 }
 
-/* Cart */
+/* Cart Section */
 .cart-box {
   text-align: center;
   padding: 4rem 2rem;
@@ -188,7 +196,7 @@ header {
   cursor: pointer;
 }
 
-/* Page Display */
+/* Page View Management */
 .page {
   display: none;
 }
